# latex-terminal

./: .gitignore  README.md  config.py  debug_regex.py  file  latex_sanitizer.py  latex_terminal.py  main.py  pyproject.toml  test  test_parse.py
