[project]
name = "latex-terminal"
version = "0.1.1"
description = "Terminal-native LaTeX rendering using the Kitty graphics protocol."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "matplotlib>=3.8.0",
]

[project.scripts]
# This allows you to run 'latex-terminal' from the command line
latex-terminal = "latex_terminal:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["latex_terminal", "latex_sanitizer", "config"]